--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.7+22
   shared_preferences: ^0.5.12+4
   event_bus: ^1.1.1
+  flutter_plugin_android_lifecycle: ^1.0.11
   # barcode_scan: ^0.0.4
 
 dev_dependencies:
